syntax = 'proto3';

option go_package = './gameevents';
option java_multiple_files = true;
option java_package = "com.github.eco_heroes.proto.game_events";
option java_outer_classname = "GameEventsProto";

package ecoheroes;

enum Type {
  UNSPECIFIED = 0;
  PLAYER_ADDED = 1;
  PLAYER_REMOVED = 2;
  WASTE_GENERATED = 3;
  WASTE_PLACED = 4;
  LIFE_LOST = 5;
  SPEED_INCREASED = 6;
  GAME_ENDED = 7;
}

message SubscriptionRequest {
  string roomId = 1;
  int32 playerNumber = 2;
}

message ServerEvent {
  Type type = 1;
}

service GameEvents {
  rpc subscribe(SubscriptionRequest) returns (stream ServerEvent);
}